Fix text overflow width in scrollable area

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -157,7 +157,7 @@ app-card natural-relations natural-table-button .mat-mdc-button {
     color: #fff;
 }
 
-#menu-scroll .ng-scroll-content {
+.ng-scroll-max-width .ng-scroll-content {
     width: 100% !important;
 }
 
